test/semantics/programs/invalid/reassign-wrong-type2.guav
# Should fail since static typing

y = "one thousand"
y = 1000
